Update code status
