# swagger.json
@@ -82,7 +82,7 @@
                     }
                 }],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Created"
                     },
                     "500": {
@@ -105,7 +105,7 @@
                     "type": "string"
                 }],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "OK"
                     }
                 }
@@ -162,7 +162,7 @@
                     }
                 }],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "Created"
                     },
                     "500": {
@@ -185,7 +185,7 @@
                     "type": "string"
                 }],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "OK"
                     }
                 }
